objects/Case_Status__c.object
<CustomObject>
    <description>Administrative object to assign case status values to stop the SLA clock and/or auto-complete case milestones</description>
    <fields>
        <fullName>AutoComplete_Milestone_Labels__c</fullName>
        <description>Milestones with names containing the selected terms will be auto completed when this status is set.</description>
        <inlineHelpText>Milestones with names containing the selected terms will be auto completed when this status is set.</inlineHelpText>
        <label>AutoComplete Milestone Labels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Response</fullName>
                </value>
                <value>
                    <fullName>Restore</fullName>
                </value>
                <value>
                    <fullName>Resolution</fullName>
                </value>
                <value>
                    <fullName>Automated Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AwaitingCustomerAcceptance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AwaitingCustomerAcceptance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClosedPendingOrders__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ClosedPendingOrders</description>
        <inlineHelpText>ClosedPendingOrders</inlineHelpText>
        <label>ClosedPendingOrders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CustomerCancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InProgress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InProgress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsResolved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this status sets the Case resolved date.</description>
        <inlineHelpText>Indicates if this status sets the Case resolved date.</inlineHelpText>
        <label>IsResolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRestored__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this status sets the Case restored date.</description>
        <inlineHelpText>Indicates if this status sets the Case restored date.</inlineHelpText>
        <label>IsRestored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PendingAdministration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PendingAdministration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PendingDevelopment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this status sets the Case PendingDevelopment date.</description>
        <inlineHelpText>Indicates if this status sets the Case PendingDevelopment date.</inlineHelpText>
        <label>PendingDevelopment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PendingExternalResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this status sets the Case PendingExternalResponse date.</description>
        <inlineHelpText>Indicates if this status sets the Case PendingExternalResponse date.</inlineHelpText>
        <label>PendingExternalResponse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PendingInternalResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this status sets the Case PendingInternalResponse date.</description>
        <inlineHelpText>Indicates if this status sets the Case PendingInternalResponse date.</inlineHelpText>
        <label>PendingInternalResponse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PendingPartsOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this status sets the Case PendingPartsOrder date.</description>
        <inlineHelpText>Indicates if this status sets the Case PendingPartsOrder date.</inlineHelpText>
        <label>PendingPartsOrder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PendingReturn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PendingReturn</description>
        <inlineHelpText>PendingReturn</inlineHelpText>
        <label>PendingReturn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stops_SLA_Clock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this Status stops the SLA clock.</description>
        <inlineHelpText>Indicates if this Status stops the SLA clock.</inlineHelpText>
        <label>Stops SLA Clock</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stops_SLA_Clock__c</columns>
        <columns>AutoComplete_Milestone_Labels__c</columns>
        <columns>IsResolved__c</columns>
        <columns>IsRestored__c</columns>
        <columns>PendingDevelopment__c</columns>
        <columns>PendingExternalResponse__c</columns>
        <columns>PendingInternalResponse__c</columns>
        <columns>PendingPartsOrder__c</columns>
        <columns>PendingReturn__c</columns>
        <columns>ClosedPendingOrders__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case SLA Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Statuses</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>